# sphinx-needs-uv

./: .gitignore  README.md
.github/workflows/: builddoc.yml
components/comp_1/sphinx-needs/: codelinks.toml  conf.py  index.rst  pyproject.toml  ubproject.toml
components/comp_1/sphinx-needs/_tools/: readme.md
components/comp_1/src/c++/: example.cpp
components/comp_1/src/py/: example.py
output/: marked_content.json
public/: index.html
